Implement program logic

--- a/Avtomivka.A/Areas/Administration/Views/Worker/InfoWorker.cshtml
+++ b/Avtomivka.A/Areas/Administration/Views/Worker/InfoWorker.cshtml
@@ -11,5 +11,5 @@
 
 <hr class="bg-dark" />
 <div>
-    <a class="btn btn-info" asp-area="Administration" asp-controller="Worker" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    <a class="btn btn-info" asp-area="Administration" asp-controller="Worker" asp-action="EditWorker" asp-route-id="@Model.Id">Edit</a>
 </div>
