--- a/Avtomivka.A/Views/WashReservation/Edit.cshtml
+++ b/Avtomivka.A/Views/WashReservation/Edit.cshtml
@@ -27,9 +27,9 @@
             </div>
 
             <hr class="bg-warning" />
-            <input type="submit" class="btn btn-warning" value="Edit" />
+            <input type="submit" class="btn btn-warning" value="Save" />
 
-            <a class="btn btn-danger" asp-area="" asp-controller="WashReservation" asp-action="Delete" asp-route-colonId="@Model.ColonId">Delete</a>
+            <a class="btn btn-danger" asp-area="" asp-controller="WashReservation" asp-action="Delete" asp-route-colonId="@Model.ColonId">Cancel</a>
         </form>
     </div>
 
