--- a/Avtomivka.A/Areas/Administration/Views/Worker/InfoWorker.cshtml
+++ b/Avtomivka.A/Areas/Administration/Views/Worker/InfoWorker.cshtml
@@ -12,4 +12,5 @@
 <hr class="bg-dark" />
 <div>
     <a class="btn btn-info" asp-area="Administration" asp-controller="Worker" asp-action="EditWorker" asp-route-id="@Model.Id">Edit</a>
+    <a class="btn btn-info" asp-area="Administration" asp-controller="Worker" asp-action="DeleteWorker" asp-route-id="@Model.Id">Fire</a>
 </div>
