--- a/Avtomivka.A/Views/WashReservation/EditReservation.cshtml
+++ b/Avtomivka.A/Views/WashReservation/EditReservation.cshtml
@@ -26,6 +26,19 @@
                 <span asp-validation-for="ProgramId" class="text-danger text-warning"></span>
             </div>
 
+            @if (!Model.Worker.Delete)
+            {
+                <div>
+                    <img src="~/Images/@Model.Worker.Image" />
+                    <h5>@Model.Worker.Name, @Model.Worker.Age</h5>
+                </div>
+            }
+            else
+            {
+                <h5>@Model.Worker.Name was fired. Your car will be handled by someone at our location</h5>
+            }
+
+
             <hr class="bg-warning" />
             <input type="submit" class="btn btn-warning" value="Save" />
 
@@ -33,9 +46,4 @@
         </form>
     </div>
 
-    <div class="col">
-        <h2 class="text-info text-center">Rules</h2>
-        <h6><span class="text-info">1. </span>Please do not write <span class="text-danger">stupid things, use inappropriate images, use profanity</span> or other things that can potentially offend other users on the forum.</h6>
-        <h6><span class="text-info">2. </span>If the above rule is broken your character will be <span class="text-danger">deleted</span>.</h6>
-    </div>
 </div>
