--- a/Avtomivka.A/Views/Home/Index.cshtml
+++ b/Avtomivka.A/Views/Home/Index.cshtml
@@ -5,10 +5,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-center text-light">
     <h2 class="display-4">Welcome to <span class="font-weight-bold">CHISTACHITE</span></h2>
+    <h1 class="display-4">Free colons : @Model.Colons.Where(x => !x.Taken).Count()</h1>
 </div>
-
+<div class="row ml-2 mb-2 align-items-center justify-content-center text-center">
+</div>
 <div class="row text-center align-items-center justify-content-center">
     @if (Model.Colons.Count() > 0)
     {
@@ -18,7 +20,7 @@
                 var boxClass = item.Taken ? "box-taken" : "box";
                 if (boxClass == "box")
                 {
-                    <a class="col-3 @boxClass text-decoration-none"
+                    <a class="col-3 @boxClass rounded bg-light text-dark text-decoration-none"
                        asp-area="" asp-controller="WashReservation" asp-action="CreateReservation" asp-route-colonId="@item.Id">
                         <h3>@item.Number</h3>
                     </a>
@@ -26,16 +28,16 @@
                 else
                 {
                     boxClass = item.UserId == userId ? "box-taken-user" : "box-taken";
-                    if (boxClass == "box-taken-user")
+                    if (this.User.Identity.IsAuthenticated && boxClass == "box-taken-user")
                     {
-                        <a class="col-3 @boxClass text-decoration-none"
-                           asp-area="" asp-controller="WashReservation" asp-action="EditReservation" asp-route-colonId="@item.Id" asp-route-reservationId="@item.">
+                        <a class="col-3 @boxClass rounded bg-warning text-light text-decoration-none"
+                           asp-area="" asp-controller="WashReservation" asp-action="EditReservation" asp-route-colonId="@item.Id">
                             <h3>@item.Number</h3>
                         </a>
                     }
                     else
                     {
-                        <div class="col-3 @boxClass">
+                        <div class="col-3 @boxClass rounded bg-danger text-light">
                             <h3>@item.Number</h3>
                         </div>
                     }
