--- a/Avtomivka.A/Views/WashReservation/EditReservation.cshtml
+++ b/Avtomivka.A/Views/WashReservation/EditReservation.cshtml
@@ -4,33 +4,40 @@
     var programs = Model.Programs.Select(x => new SelectListItem(x.Name, x.Id));
 }
 
-<div class="row" id="form" data-worker-image="/Worker/GetImage">
-    <div class="col">
+<div id="form"
+     data-worker-image="/Worker/GetImage"
+     data-program-description="/Program/GetDescription">
+    <div>
         <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
 
-            <div class="form-group ">
-                <label asp-for="ReservationDate" class="font-weight-bold text-warning"></label>
-                <label class="text-danger">*</label>
-                <input asp-for="ReservationDate" type="date" class="form-control bg-dark text-white border border-dark" />
-                <span asp-validation-for="ReservationDate" class="text-danger"></span>
-            </div>
+            <label asp-for="ReservationDate" class="form-text"></label>
+            <input asp-for="ReservationDate" type="date" class="form-control" />
 
-            <div class="form-group">
-                <label asp-for="ProgramId" class="font-weight-bold text-warning"></label>
-                <label class="text-danger">*</label>
-                <select asp-for="ProgramId" class="form-control bg-dark text-white border border-dark"
-                        asp-items="programs">
-                    <option value="" selected>None</option>
-                </select>
-                <span asp-validation-for="ProgramId" class="text-danger text-warning"></span>
-            </div>
+            <label asp-for="ProgramId" class="form-text"></label>
+            <select asp-for="ProgramId" class="form-control program-select" asp-items="programs">
+                <option value="" selected>None</option>
+            </select>
+
+            @if (string.IsNullOrWhiteSpace(Model.ProgramId))
+            {
+                <div>
+                    <textarea class="program-description mt-2" style="display: none; width: 100%" disabled rows="5">@Model.Description</textarea>
+                </div>
+            }
+            else
+            {
+                <div>
+                    <textarea class="program-description mt-2" style="width: 100%" disabled rows="5">@Model.Description</textarea>
+                </div>
+            }
+
 
             @if (!Model.Worker.Delete)
             {
                 <div>
-                    <img src="~/Images/@Model.Worker.Image" />
-                    <h5>@Model.Worker.Name, @Model.Worker.Age</h5>
+                    <h5>Your worker <span class="font-weight-bold">@Model.Worker.Name</span>, @Model.Worker.Age</h5>
+                    <img class="border border-light" src="~/Images/@Model.Worker.Image" />
                 </div>
             }
             else
@@ -39,10 +46,10 @@
             }
 
 
-            <hr class="bg-warning" />
-            <input type="submit" class="btn btn-warning" value="Save" />
-
-            <a class="btn btn-danger" asp-area="" asp-controller="WashReservation" asp-action="Delete" asp-route-colonId="@Model.ColonId">Cancel</a>
+            <div class="mt-2">
+                <input type="submit" class="btn btn-info" value="Save" asp-route-workerId="@Model.Worker.Id" asp-route-colonId="@Model.ColonId" />
+                <a class="btn btn-danger" asp-area="" asp-controller="WashReservation" asp-action="Delete" asp-route-colonId="@Model.ColonId">Cancel</a>
+            </div>
         </form>
     </div>
 
