--- a/Avtomivka.A/wwwroot/css/site.css
+++ b/Avtomivka.A/wwwroot/css/site.css
@@ -1,34 +1,26 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+for details on configuring this project to bundle and minify static web assets.
 
-img{
+
+.program-description {
+    
+}
+
+img {
     height: 200px;
     width: 200px;
 }
+
 .box, .box-taken, .box-taken-user {
     height: 150px;
     margin: 5px;
-    color: white;
 }
-    
+
     .box:hover {
         transition: all .2s ease-in;
         background: gray;
         color: black;
     }
-
-
-.box {
-    background-color: blue;
-}
-
-.box-taken {
-    background-color: red;
-}
-
-.box-taken-user {
-    background-color: orange;
-}
 
 a.navbar-brand {
     white-space: normal;
@@ -36,7 +28,7 @@ a.navbar-brand {
     word-break: break-all;
 }
 
-/* Provide sufficient contrast against white background */
+Provide sufficient contrast against white background
 a {
     color: #0366d6;
 }
@@ -53,8 +45,8 @@ a {
     border-color: #1861ac;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
+Sticky footer styles
+--------------------------------------------------
 html {
     font-size: 14px;
 }
@@ -82,15 +74,15 @@ button.accept-policy {
     line-height: inherit;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
+Sticky footer styles
+--------------------------------------------------
 html {
     position: relative;
     min-height: 100%;
 }
 
 body {
-    /* Margin bottom by footer height */
+    Margin bottom by footer height;
     margin-bottom: 60px;
 }
 
@@ -99,5 +91,6 @@ body {
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px;
+    Vertically: center the text there;
 }
