--- a/Avtomivka.A/Areas/Admin/Views/Colon/Colons.cshtml
+++ b/Avtomivka.A/Areas/Admin/Views/Colon/Colons.cshtml
@@ -23,4 +23,4 @@
         </tbody>
     </table>
 </div>
-<a asp-area="Admin" asp-controller="Colon" asp-action="CreateColon" class="btn btn-info">Create</a>
+<a asp-area="Admin" asp-controller="Colon" asp-action="CreateColon" class="form-button btn">Create</a>
