--- a/Avtomivka.A/Areas/Admin/Views/Program/CreateProgram.cshtml
+++ b/Avtomivka.A/Areas/Admin/Views/Program/CreateProgram.cshtml
@@ -15,7 +15,7 @@
         <label asp-for="Description"></label>
         <textarea asp-for="Description" class="form-control " rows="3"></textarea>
 
-        <input type="submit" class="btn btn-info mt-2" value="Create" />
+        <input type="submit" class="form-button btn mt-2" value="Create" />
     </form>
 </div>
 
