--- a/Avtomivka.A/Areas/Admin/Views/Worker/CreateWorker.cshtml
+++ b/Avtomivka.A/Areas/Admin/Views/Worker/CreateWorker.cshtml
@@ -16,7 +16,7 @@
         <label asp-for="Image"></label>
         <input asp-for="Image" class="form-control" />
 
-        <input type="submit" class="btn btn-info mt-2" value="Create" />
+        <input type="submit" class="form-button btn mt-2" value="Create" />
 
     </form>
 </div>
