--- a/Avtomivka.A/Areas/Admin/Views/Worker/Workers.cshtml
+++ b/Avtomivka.A/Areas/Admin/Views/Worker/Workers.cshtml
@@ -25,4 +25,4 @@
         </tbody>
     </table>
 </div>
-<a asp-area="Admin" asp-controller="Worker" asp-action="CreateWorker" class="btn btn-info">Create</a>
+<a asp-area="Admin" asp-controller="Worker" asp-action="CreateWorker" class="form-button btn">Create</a>
