--- a/Avtomivka.A/Views/WashReservation/CreateReservation.cshtml
+++ b/Avtomivka.A/Views/WashReservation/CreateReservation.cshtml
@@ -30,7 +30,7 @@
 
             <img class="worker-image border border-light mt-2" style="display: none;" src="" />
             <div>
-                <input type="submit" class="mt-4 btn btn-info" value="Reserve" />
+                <input type="submit" class="mt-2 form-button" value="Reserve" />
             </div>
         </form>
 
