--- a/Avtomivka.A/Areas/Admin/Views/Program/Programs.cshtml
+++ b/Avtomivka.A/Areas/Admin/Views/Program/Programs.cshtml
@@ -25,5 +25,4 @@
         </tbody>
     </table>
 </div>
-<a asp-area="Admin" asp-controller="Program" asp-action="CreateProgram" class="btn btn-info ">Create</a>
-<a asp-area="Admin" asp-controller="Program" asp-action="ExportPrograms" class="btn btn-success ">Export</a>
+<a asp-area="Admin" asp-controller="Program" asp-action="CreateProgram" class="form-button btn">Create</a>
