--- a/Avtomivka.A/wwwroot/css/site.css
+++ b/Avtomivka.A/wwwroot/css/site.css
@@ -1,9 +1,51 @@
-﻿Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets.
+﻿/*Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+for details on configuring this project to bundle and minify static web assets.*/
 
 
-.program-description {
-    
+.form-button-danger {
+    background-color: #c62d1f;
+    border-radius: 15px;
+    border: 1px solid black;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 14px;
+    padding: 7px 25px;
+    text-decoration: none;
+}
+
+    .form-button-danger:hover {
+        background-color: #f24437;
+    }
+
+    .form-button-danger:active {
+        position: relative;
+        top: 1px;
+    }
+
+
+.form-button {
+    background-color: #eae0c2;
+    border-radius: 15px;
+    border: 1px solid black;
+    display: inline-block;
+    cursor: pointer;
+    color: #505739;
+    font-family: Arial;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 7px 25px;
+    text-decoration: none;
+}
+
+.form-button:hover {
+    background-color: #ccc2a6;
+}
+
+.form-button:active {
+    position: relative;
+    top: 1px;
 }
 
 img {
