--- a/Avtomivka.A/Areas/Admin/Views/Colon/Colons.cshtml
+++ b/Avtomivka.A/Areas/Admin/Views/Colon/Colons.cshtml
@@ -1,6 +1,13 @@
 ﻿@model IEnumerable<Colon>
 
 <div>
+    <div class="mb-2">
+        <input class="search-input" />
+        <select class="select-input">
+            <option value="0">Number</option>
+            <option value="1">Taken</option>
+        </select>
+    </div>
     <table class="table table-bordered bg-light border-info caption-top">
         <thead>
             <tr>
