--- a/Avtomivka.A/Areas/Admin/Views/Worker/Workers.cshtml
+++ b/Avtomivka.A/Areas/Admin/Views/Worker/Workers.cshtml
@@ -1,6 +1,17 @@
 ﻿@model WorkersAllVM
 
 <div>
+    <div class="mb-2">
+        <input class="search-input" />
+        <select class="select-input">
+            <option value="0">Name</option>
+            <option value="1">Age</option>
+            <option value="2">Taken</option>
+        </select>
+    </div>
+    <div class="mb-2">
+        <input class="search-input" />
+    </div>
     <table class="table bg-light table-bordered">
         <thead>
             <tr>
