--- a/Avtomivka.A/Views/Shared/_Layout.cshtml
+++ b/Avtomivka.A/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-light" asp-area="Admin" asp-controller="Program" asp-action="Programs">Programs</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="Admin" asp-controller="WashReservation" asp-action="WashReservations">All reservations</a>
+                                </li>
                             }
                         </ul>
                         <partial name="_LoginPartial" />
