--- a/Avtomivka.A/Views/Home/Index.cshtml
+++ b/Avtomivka.A/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="text-center text-light">
-    <h2 class="display-4">Welcome to <span class="font-weight-bold">CHISTACHITE</span></h2>
+    <h2 class="display-4" style="background-color: red;">Welcome to <span class="font-weight-bold">TEST</span></h2>
     <h1 class="display-4">Free colons : @Model.Colons.Where(x => !x.Taken).Count()</h1>
 </div>
 <div class="row ml-2 mb-2 align-items-center justify-content-center text-center">
